# svOneDSolver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  test.yml
Code/Source/: cvOneDCreateAndRunModel.cxx  cvOneDCreateAndRunModel.h  cvOneDException.cxx  cvOneDException.h  cvOneDInputFlagParser.cxx  cvOneDInputFlagParser.h  cvOneDModelManager.cxx  cvOneDModelManager.h  cvOneDOptions.cxx  cvOneDOptions.h  cvOneDOptionsJsonParser.cxx  cvOneDOptionsJsonParser.h  cvOneDOptionsJsonSerializer.cxx  cvOneDOptionsJsonSerializer.h  cvOneDOptionsLegacySerializer.cxx  cvOneDOptionsLegacySerializer.h  cvOneDSegment.cxx  cvOneDSegment.h  cvOneDSegmentSpatialCharacteristics.cxx  cvOneDSegmentSpatialCharacteristics.h  main.cxx  main.h  oneDSolver.i  testJson.cxx  testJson.h
Tests/SystemTests/: __init__.py  conftest.py  test_integration.py
Tests/UnitTests/: ExampleTest.cxx  OptionsTestHelpers.cxx  OptionsTestHelpers.hpp  TestJsonSerialization.cxx  TestLegacySerializer.cxx
Tests/UnitTests/TestFiles/: TestInput.json
py/scripts/: fileTemplate.py  runParallelSolver.py  simResultRecord.py  testRunSolver.py
